delete more uneeded files, fix table of contents css spacing

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -3,6 +3,10 @@
 ---
 @import "whiteglass";
 
+ul#markdown-toc {
+    margin-top: -10px;
+}
+
 // h1, h2, h3, h4, h5, h6 {
 //     font-family: Helvetica;
 // }
